--- a/signup/index2.html
+++ b/signup/index2.html
@@ -27,6 +27,9 @@
             </div>
         </div>
         <div class="img"></div>
+        <div class="arrow"></div>
+        <div class="man"></div>
+        </div>
     </div>
 </body>
 </html>
